--- a/client/style.css
+++ b/client/style.css
@@ -9,11 +9,19 @@ body{
 }
 
 header{
+	height:50px;
 	background-color: #111;
 	color: white;
-	font-size: 2em;
-	padding: 10px;
+	font-size: 30px;
 	font-family: 'Rubik', sans-serif;
+}
+header #title{
+	position: absolute;
+	display: inline-block;
+	margin: 8px 0 0 8px;
+	font-size: 30px;
+    color: white;
+    text-align: center;
 }
 
 span{
@@ -22,8 +30,8 @@ span{
 }
 
 button{
-	width: 70px;
 	height: 40px;
+	padding: 5px;
 	font-size: 1.3em;
 }
 button:mousedown{
@@ -65,6 +73,13 @@ textarea{
 	height: 30px;
 }
 
+.character{
+	padding: 5px;
+}
+.character:hover{
+	background-color: #CCC;
+}
+
 .title{
 	font-size: 1.2em;
 	padding: 5px;
@@ -81,33 +96,41 @@ textarea{
 	font-size: 1em;
 }
 
-.alt0{ background-color: #FFF; }
-.alt1{ background-color: #EEE; }
-
-li .active {
-    background-color: #4CAF50;
-    color: white;
-}
+.alt0{ background-color: #DDD; }
+.alt1{ background-color: #FFF; }
 
 /*
  *  IDs
  */
 
- #navbar ul {
+#navbar{
+	display: inline-block;
+	position: relative;
+	float: right;
+	margin: 0 20px 0 0;
+}
+#navbar ul {
+	height: 100%;
+	font-size: 20px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    background-color: #f1f1f1;
-    height: 100%; /* Full height */
-    position: fixed; /* Make it stick, even on scroll */
-    overflow: auto; /* Enable scrolling if the sidenav has too much content */
+    overflow: hidden;
+    text-align: center;
+    background-color: #222;
+}
+#navbar ul li {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 13px 20px;
+    text-decoration: none;
+}
+#navbar ul li:hover {
+    background-color: #111;
 }
 
-#character-container{
-	position:relative;
-	width:75%;
-	left: 25%;
+#navbar ul li.active{
+	background-color: #333;
 }
 
 #character-attributes{
