--- a/client/style.css
+++ b/client/style.css
@@ -24,6 +24,10 @@ header #title{
     text-align: center;
 }
 
+h1, h2, h3{
+	padding-bottom: 10px;
+}
+
 span{
 	display: inline-block;
 	white-space: nowrap;
@@ -75,6 +79,7 @@ textarea{
 
 .character{
 	padding: 5px;
+	min-height: 35px;
 }
 .character:hover{
 	background-color: #CCC;
@@ -133,6 +138,12 @@ textarea{
 	background-color: #333;
 }
 
+#character-list button{
+	position: relative;
+	float: right;
+	height: 100%;
+}
+
 #character-attributes{
 	font-size: 1.5em;
 }
@@ -147,7 +158,10 @@ textarea{
 	font-size: 14px;
 }
 
-#character-advantages span, #character-disadvantages span, #character-skills span{
+#character-advantages span, 
+#character-disadvantages span, 
+#character-skills span, 
+#character-inventory span{
 	width: 100%;
 	display: block;
 }
